[package]
name = "tg-channelpost-clone"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.29"
clap = { version = "4.4.2", features = ["derive"] }
lazy_static = "1.4.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
teloxide = {version="0.12.2", features = ["macros"]}
thiserror = "1.0.48"
tokio = {version = "1.32.0", features = ["rt", "rt-multi-thread","macros"]}
